feat: added google font import

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 		<title>sh1marin's index page</title>
 		<meta name="description" content="my fancy old school index page" />
-		<meta name="author" content="avimitin" />
+		<meta name="author" content="avimitin, jixun" />
 
 		<meta property="og:title" content="sh1marin's index page" />
 		<meta property="og:type" content="website" />
@@ -20,6 +20,12 @@
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
 		<link rel="stylesheet" href="styles.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 
 	<body>
@@ -29,7 +35,9 @@
 			//
 			<a href="https://blog.sh1mar.in">Blog</a>
 			//
-			<a href="static/F5904F76DEC0D1E2.pub.asc">GPG Key</a>
+			<a href="https://keys.openpgp.org/search?q=23EDB79F19D38844F2B0C8D4F5904F76DEC0D1E2"
+				>GPG Key</a
+			>
 			//
 			<a href="mailto:4vin7n@protonmail.com">Contact</a>
 		</p>
