refactor: using local gpg page

--- a/index.html
+++ b/index.html
@@ -39,12 +39,9 @@
 			//
 			<a href="https://blog.sh1mar.in">Blog</a>
 			//
-			<a href="https://keys.openpgp.org/search?q=23EDB79F19D38844F2B0C8D4F5904F76DEC0D1E2"
-				>GPG Key</a
-			>
+			<a href="./gpg-key.html">GPG Key</a>
 			//
 			<a href="mailto:4vin7n@protonmail.com">Contact</a>
 		</p>
-		<img src="static/shimarin.gif" />
 	</body>
 </html>
