--- a/index.html
+++ b/index.html
@@ -30,18 +30,29 @@
 			href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap"
 			rel="stylesheet"
 		/>
+
+		<script src="https://kit.fontawesome.com/353bfcadd1.js" crossorigin="anonymous"></script>
 	</head>
 
 	<body>
-		<h1>Home of sh1marin</h1>
-		<p>
-			<a href="https://github.com/Avimitin">GitHub</a>
-			//
-			<a href="https://blog.sh1mar.in">Blog</a>
-			//
-			<a href="./gpg-key.html">GPG Key</a>
-			//
-			<a href="mailto:4vin7n@protonmail.com">Contact</a>
-		</p>
+		<div class="side"></div>
+		<div class="center">
+			<h1>Home of sh1marin</h1>
+			<p>
+				<a class="links" href="https://github.com/Avimitin"><i class="fab fa-github"></i></a>
+				//
+				<a class="links" href="https://blog.sh1mar.in"><i class="fas fa-newspaper"></i></a>
+				//
+				<a
+					class="links"
+					href="https://keyserver.ubuntu.com/pks/lookup?search=0xe0e6c2571b4a342fb87adf04b3f56f90e6593542&fingerprint=on&op=index"
+					title="PGP key search for 0xE6593542"
+					><i class="fas fa-key"></i
+				></a>
+				//
+				<a class="links" href="mailto:4vin7n@protonmail.com"><i class="fas fa-at"></i></a>
+			</p>
+		</div>
+		<div class="side"></div>
 	</body>
 </html>
