refactor: minimize pages and redesign the link
html:
- Delete all the remote font which will cause latency.
- Delete awesome font icon and replace it with normal text.
- Update GPG keys
css:
- Use monospace for the h1 title.
- Enlarge the font and add padding.
- Show underline only when cursor hover on it.
- Set text-decoration to none for all the link.
- Redesign the link color and animation.

Signed-off-by: Avimitin <avimitin@gmail.com>

--- a/index.html
+++ b/index.html
@@ -24,14 +24,6 @@
 		<meta name="theme-color" content="#ffffff" />
 
 		<link rel="stylesheet" href="styles.css" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap"
-			rel="stylesheet"
-		/>
-
-		<script src="https://kit.fontawesome.com/353bfcadd1.js" crossorigin="anonymous"></script>
 	</head>
 
 	<body>
@@ -39,18 +31,12 @@
 		<div class="center">
 			<h1>Home of sh1marin</h1>
 			<p>
-				<a class="links" href="https://github.com/Avimitin"><i class="fab fa-github"></i></a>
-				//
-				<a class="links" href="https://blog.sh1mar.in"><i class="fas fa-newspaper"></i></a>
-				//
-				<a
-					class="links"
-					href="https://keyserver.ubuntu.com/pks/lookup?search=0xe0e6c2571b4a342fb87adf04b3f56f90e6593542&fingerprint=on&op=index"
-					title="PGP key search for 0xE6593542"
-					><i class="fas fa-key"></i
-				></a>
-				//
-				<a class="links" href="mailto:4vin7n@protonmail.com"><i class="fas fa-at"></i></a>
+				<a class="links" href="https://github.com/Avimitin">#GitHub</a>
+				<a class="links" href="https://blog.sh1mar.in">#Blog</a>
+				<a class="links"
+					href="https://keyserver.ubuntu.com/pks/lookup?search=0xB51FAD6DD9998EE8&fingerprint=on&op=index"
+					title="PGP key search for 0xE6593542">#GPG</a>
+				<a class="links" href="mailto:4vin7n@protonmail.com">#Mail</a>
 			</p>
 		</div>
 		<div class="side"></div>
