--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 				<a class="links" href="https://github.com/Avimitin">#GitHub</a>
 				<a class="links" href="https://blog.sh1mar.in">#Blog</a>
 				<a class="links"
-					href="https://keyserver.ubuntu.com/pks/lookup?search=0xB51FAD6DD9998EE8&fingerprint=on&op=index"
-					title="PGP key search for 0xE6593542">#GPG</a>
-				<a class="links" href="mailto:4vin7n@protonmail.com">#Mail</a>
+					href="https://keyserver.ubuntu.com/pks/lookup?search=0xFF7883E3BF6835DD&fingerprint=on&op=index"
+					title="PGP key search for 0xFF7883E3BF6835DD">#GPG</a>
+				<a class="links" href="mailto:avimitin@gmail.com">#Mail</a>
 			</p>
 		</div>
 		<div class="side"></div>
