feat: add progress hyperlink
Signed-off-by: Avimitin <avimitin@gmail.com>

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 					href="https://keyserver.ubuntu.com/pks/lookup?search=0xFF7883E3BF6835DD&fingerprint=on&op=index"
 					title="PGP key search for 0xFF7883E3BF6835DD">#GPG</a>
 				<a class="links" href="mailto:avimitin@gmail.com">#Mail</a>
+				<a class="links"
+					href="https://sh1marin.notion.site/0fa0407364b54c55bdd270619d4d4f0a?v=cb5fb0fcc7f04585a5150020c0d55f39"
+					>#Progress</a>
 			</p>
 		</div>
 		<div class="side"></div>
