Update email address
Signed-off-by: Avimitin <avimitin@gmail.com>

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<a class="links"
 					href="https://keyserver.ubuntu.com/pks/lookup?search=0xFF7883E3BF6835DD&fingerprint=on&op=index"
 					title="PGP key search for 0xFF7883E3BF6835DD">#GPG</a>
-				<a class="links" href="mailto:avimitin@gmail.com">#Mail</a>
+				<a class="links" href="mailto:dev@avimit.in">#Mail</a>
 			</p>
 		</div>
 		<div class="side"></div>
